[project]
name = "llm-timeline-visualization"
version = "1.0.0"
description = "Interactive timeline visualization of Simon Willison's Year in LLMs blog posts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
]

[project.scripts]
scrape-year = "scrape_year_in_llms:main"

[project.urls]
"Source" = "https://github.com/yourusername/llm-timeline-visualization"
"Simon Willison's Blog" = "https://simonwillison.net/"

[tool.uv]
dev-dependencies = []
